fix: fixed word wrapping in document titles in confidentiality.css

--- a/assets/css/confidentiality.css
+++ b/assets/css/confidentiality.css
@@ -126,6 +126,7 @@
 
 .main-certificates__item-title,
 .main-network__item-title {
+	text-transform: uppercase;
 	font-family: 'Geologica';
 	font-size: 24px;
 	font-weight: 700;
